--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
         <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
         <!-- define a camera which will move according to the marker position -->
         <a-marker-camera preset='hiro'></a-marker-camera>
+
+        <!-- define your gltf asset -->
+        <a-assets>
+            <a-asset-item id="sprite-can" src="./sprite-can/can.3ds"></a-asset-item>
+        </a-assets>
+        <!-- use your gltf model -->
+        <a-entity gltf-model="##sprite-can"></a-entity>
+
+        <a-text value="Hello, World!"></a-text>
     </a-scene>
 </body>
 
