--- a/index.html
+++ b/index.html
@@ -13,20 +13,12 @@
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 
 <body style='margin : 0px; overflow: hidden;'>
-    <a-scene embedded arjs>
-        <!-- create your content here. just a box for now -->
-        <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
-        <!-- define a camera which will move according to the marker position -->
-        <a-marker-camera preset='kanji'></a-marker-camera>
-
-        <!-- define your gltf asset -->
-        <a-assets>
-            <a-asset-item id="sprite-can" src="./sprite-can/can.3ds"></a-asset-item>
-        </a-assets>
-        <!-- use your gltf model -->
-        <a-entity gltf-model="##sprite-can"></a-entity>
-
-        <a-text value="Hello, World!"></a-text>
+    <!-- add artoolkit into your scene -->
+    <a-scene artoolkit>
+        <!-- define your scene as usual -->
+        <a-box></a-box>
+        <!-- define a camera inside the <a-marker-camera> -->
+        <a-marker-camera preset='hiro'><a-marker-camera>
     </a-scene>
 </body>
 
