--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- add artoolkit into your scene -->
     <a-scene artoolkit>
         <!-- define your scene as usual -->
-        <a-box></a-box>
+        <a-box position='0 0.5 0'></a-box>
         <!-- define a camera inside the <a-marker-camera> -->
         <a-marker-camera preset='hiro'><a-marker-camera>
     </a-scene>
