새로고침 버튼 수정

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         position: fixed;
         top: 10px;
         z-index: 10;
+        background-color: blue;
     }
 </style>
 
@@ -27,7 +28,7 @@
     <a-scene artoolkit>
 
         <div class="reload_btn">
-            새로고침하기
+
         </div>
         <!-- define your scene as usual -->
         <a-box position='0 0.5 0'></a-box>
