--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AR_TEST</title>
+    <title>AR_TEST11111111</title>
 </head>
 
 <style>
@@ -24,12 +24,11 @@
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 
 <body style='margin : 0px; overflow: hidden;'>
+    <div class="reload_btn">
+
+    </div>
     <!-- add artoolkit into your scene -->
     <a-scene artoolkit>
-
-        <div class="reload_btn">
-
-        </div>
         <!-- define your scene as usual -->
         <a-box position='0 0.5 0'></a-box>
         <!-- define a camera inside the <a-marker-camera> -->
