--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <div class="ar_area">
         <a-scene artoolkit>
             <!-- define your scene as usual -->
-            <a-box position='0 0.5 0'></a-box>
+            <a-box material="color: red;" scale="300 300 300" position="0 0 0"></a-box>
+
             <!-- define a camera inside the <a-marker-camera> -->
             <a-marker-camera preset='hiro'><a-marker-camera>
         </a-scene>
