--- a/index.html
+++ b/index.html
@@ -30,16 +30,35 @@
     </div>
     <!-- add artoolkit into your scene -->
     <div class="ar_area">
-        <a-scene artoolkit>
-            <!-- define your scene as usual -->
-            <a-box material="color: red;" scale="300 300 300" position="0 0 0"></a-box>
+        <a-scene embedded arjs='sourceType: webcam;'>
+            <!-- handle marker with your own pattern -->
+            <a-marker type='pattern' url='path/to/pattern-marker.patt'>
+                <a-box position='0 0.5 0' material='color: red;'></a-box>
+            </a-marker>
 
-            <!-- define a camera inside the <a-marker-camera> -->
-            <a-marker-camera preset='hiro'><a-marker-camera>
+            <!-- handle marker with hiro preset -->
+            <a-marker preset='hiro'>
+                <a-box position='0 0.5 0' material='color: green;'></a-box>
+            </a-marker>
+
+            <!-- handle barcode marker -->
+            <a-marker type='barcode' value='5'>
+                <a-box position='0 0.5 0' material='color: blue;'></a-box>
+            </a-marker>
+
+            <!-- add a simple camera -->
+            <a-entity camera></a-entity>
         </a-scene>
     </div>
 
     <script>
+
+
+        window.addEventListener('DOMContentLoaded', function () {
+            //실행 코드
+            getUserMedia(constraints)
+        })
+
         document.querySelector('.reload_btn').addEventListener('click', function (e) {
             location.reload(true);
         })
