--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     .reload_btn {
         height: 10vh;
         background-color: skyblue;
+        color: black;
     }
 
     .ar_area {
@@ -26,7 +27,7 @@
 
 <body style='margin : 0px; overflow: hidden;'>
     <div class="reload_btn">
-        새로고침하기
+        <p>새로고침하기</p>
     </div>
     <!-- add artoolkit into your scene -->
     <div class="ar_area">
