--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 </style>
 
 <!-- include A-Frame obviously -->
-<script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
+<script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 <!-- include ar.js for A-Frame -->
-<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+<script src="https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar-nft.js"></script>
 
 <body style='margin : 0px; overflow: hidden;'>
     <div class="reload_btn">
@@ -31,24 +31,19 @@
     </div>
     <!-- add artoolkit into your scene -->
     <div class="ar_area">
-        <a-scene embedded arjs='sourceType: webcam;'>
-            <!-- handle marker with your own pattern -->
-            <a-marker type='pattern' url='path/to/pattern-marker.patt'>
-                <a-box position='0 0.5 0' material='color: red;'></a-box>
-            </a-marker>
+        <a-scene embedded arjs="sourceType: webcam;">
 
-            <!-- handle marker with hiro preset -->
-            <a-marker preset='hiro'>
-                <a-box position='0 0.5 0' material='color: green;'></a-box>
-            </a-marker>
+            <a-assets>
+                <a-asset-item id="cake-obj"
+                    src="https://cdn.rawgit.com/HackyRoot/A-Frame-Examples/c6a977a7/Happy_Birthday/assets/cake.obj"></a-asset-item>
+                <a-asset-item id="cake-mtl"
+                    src="https://cdn.rawgit.com/HackyRoot/A-Frame-Examples/c6a977a7/Happy_Birthday/assets/cake.mtl"></a-asset-item>
+            </a-assets>
 
-            <!-- handle barcode marker -->
-            <a-marker type='barcode' value='5'>
-                <a-box position='0 0.5 0' material='color: blue;'></a-box>
-            </a-marker>
+            <a-marker-camera present="hiro">
+                <a-obj-model src="#cake-obj" mtl="#cake-mtl" rotation="60 20 -155" scale="1 0.5 1"></a-obj-model>
+            </a-marker-camera>
 
-            <!-- add a simple camera -->
-            <a-entity camera></a-entity>
         </a-scene>
     </div>
 
