--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AR_TEST11111111</title>
+
+
+    <style>
+        .reload_btn {
+            height: 10vh;
+            background-color: skyblue;
+            color: black;
+        }
+
+        .ar_area {
+            width: 100vw;
+            height: 90vh;
+        }
+    </style>
+
+    <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
+
 </head>
-
-<style>
-    .reload_btn {
-        height: 10vh;
-        background-color: skyblue;
-        color: black;
-    }
-
-    .ar_area {
-        width: 100vw;
-        height: 90vh;
-    }
-</style>
-
-<!-- include A-Frame obviously -->
-<script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-<!-- include ar.js for A-Frame -->
-<script src="https://raw.githack.com/AR-js-org/AR.js/3.4.5/aframe/build/aframe-ar-nft.js"></script>
 
 <body style='margin : 0px; overflow: hidden;'>
     <div class="reload_btn">
