--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
     <style>
         .reload_btn {
-            height: 10vh;
+            max-height: 10vh;
             background-color: skyblue;
             color: black;
         }
 
         .ar_area {
-            width: 100vw;
-            height: 90vh;
+            max-width: 100vw;
+            max-height: 90vh;
         }
     </style>
 
