--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             max-width: 100vw;
             max-height: 90vh;
         }
+
+        .ar_area a-scene {
+            width: 100%;
+            height: 100%;
+        }
     </style>
 
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
