--- a/index.html
+++ b/index.html
@@ -3,32 +3,18 @@
 <head>
     <title>Saltwash Labs</title>
 
-    https://aframe.io/releases/1.3.0/aframe.min.js
-    https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js
+    <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
+    <script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
+    <script>
+        THREEx.ArToolkitContext.baseURL = 'https://rawgit.com/jeromeetienne/ar.js/master/three.js/'
+    </script>
 </head>
 
 <body>
 
-    <a-scene webxr="optionalFeatures: hit-test;" ar-hit-test="target: #scalawag; type: map;"
-        renderer="colorManagement: true;">
-        <a-assets>
-            <a-asset-item id="scalawag-gltf" src="assets/ha_scalawag.gltf"></a-asset-item>
-            <a-asset-item id="stage-gltf" src="assets/ha_stage.gltf"></a-asset-item>
-        </a-assets>
-
-        <a-entity id="scalawag" gltf-model="#scalawag-gltf" position="-0.9 0 -1.5" scale="1.25 1.25 1.25"
-            shadow="receive: false" animation-mixer></a-entity>
-
-        <a-entity hide-on-enter-ar id="stage" gltf-model="#stage-gltf" shadow="cast: false"></a-entity>
-
-        <a-entity id="rig" position="0 0 2.2">
-            <a-entity id="camera" camera look-controls position="0 1.6 0"></a-entity>
-        </a-entity>
-
-        <a-entity light="type: ambient; intensity: 0.5;"></a-entity>
-        <a-entity light="type: directional; castShadow: true; intensity: 0.6;" position="-1 2 4"></a-entity>
-
-        <a-sky hide-on-enter-ar color="#19ABE5"></a-sky>
+    <a-scene artoolkit='sourceType: webcam;'>
+        <a-box position='0 0 0.5' material='opacity: 0.5;'></a-box>
+        <a-marker-camera preset='marker.png'></a-marker-camera>
     </a-scene>
 
 </body>
