--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 
 <head>
     <title>Saltwash Labs</title>
-
-    <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
-    <script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
-    <script>
-        THREEx.ArToolkitContext.baseURL = 'https://rawgit.com/jeromeetienne/ar.js/master/three.js/'
-    </script>
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 </head>
 
 <body>
+    <a-scene>
+        <a-assets>
+            <img id="groundTexture" src="https://cdn.aframe.io/a-painter/images/floor.jpg">
+            <img id="skyTexture" src="https://cdn.aframe.io/a-painter/images/sky.jpg">
+        </a-assets>
 
-    <a-scene artoolkit='sourceType: webcam;'>
-        <a-box position='0 0 0.5' material='opacity: 0.5;'></a-box>
-        <a-marker-camera preset='marker.png'></a-marker-camera>
+        <a-cylinder id="ground" src="#groundTexture" radius="30" height="0.1"></a-cylinder>
+
+        <a-sky id="background" src="#skyTexture" theta-length="90" radius="30"></a-sky>
     </a-scene>
-
 </body>
 
 </html>
