--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
                 gltf-model="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"></a-entity>
         </a-marker>
         <a-text value="This content will always face you." look-at="[gps-camera]" scale="120 120 120"
-            gps-entity-place="latitude: <add-your-latitude>; longitude: <add-your-longitude>;"></a-text>
+            gps-entity-place="latitude: 35.175726; longitude: 129.124960;"></a-text>
         <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
 
     <script>
         let markerList = [
-            "",
-            "",
+            { "latitude": "35.175726", "longitude": "129.124960" },
         ]
     </script>
 </body>
