--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 gltf-model="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"></a-entity>
         </a-marker>
         <a-text value="This content will always face you." look-at="[gps-camera]" scale="120 120 120"
-            gps-entity-place="latitude: 35.176037; longitude: 129.124727;"></a-text>
+            gps-entity-place="latitude: 35.17633104055863; longitude: 129.1248779120769;"></a-text>
         <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
 
