--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body style="margin : 0px; overflow: hidden;">
-    <a-scene embedded arjs>
+    <a-scene id="a_scene" vr-mode-ui="enabled: false"
+        arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;">
         <a-marker preset="hiro">
             <!-- we use cors proxy to avoid cross-origin problems ATTENTION! you need to set up your server -->
             <a-entity position="0 0 0" scale="0.05 0.05 0.05"
@@ -23,6 +24,18 @@
         let markerList = [
             { "latitude": "35.175726", "longitude": "129.124960" },
         ]
+
+        window.addEventListener('DOMContentLoaded', function () {
+            navigator.geolocation.getCurrentPosition((position) => {
+                // doSomething(position.coords.latitude, position.coords.longitude);
+                const scene = document.querySelector("#a_scene")
+                scene.innerHTML +=
+                    `
+            <a-text value="This content will always face you." look-at="[gps-camera]" scale="120 120 120"
+            gps-entity-place="latitude: `+ position.coords.latitude + `; longitude: ` + position.coords.longitude + `;"></a-text>
+            `
+            });
+        });
     </script>
 </body>
 
