--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 gltf-model="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"></a-entity>
         </a-marker>
         <a-text value="This content will always face you." look-at="[gps-camera]" scale="120 120 120"
-            gps-entity-place="latitude: <35.176328692427866>; longitude: <129.12546811659638>;"></a-text>
+            gps-entity-place="latitude: 35.176328692427866; longitude: 129.12546811659638;"></a-text>
         <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
 
@@ -24,7 +24,6 @@
         let markerList = [
             { "latitude": "35.175726", "longitude": "129.124960" },
         ]
-
         window.addEventListener('DOMContentLoaded', function () {
             navigator.geolocation.getCurrentPosition((position) => {
                 // doSomething(position.coords.latitude, position.coords.longitude);
