--- a/index.html
+++ b/index.html
@@ -35,12 +35,7 @@
                 console.log(position)
                 // doSomething(position.coords.latitude, position.coords.longitude);
 
-                scene.prepend(`
-                <a-entity position="0 0 0" scale="0.05 0.05 0.05"
-                gltf-model="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
-                gps-entity-place="latitude: `+ position.coords.latitude + `; longitude: ` + position.coords.longitude + `;"
-                ></a-entity>
-                `);
+                scene.prepend("<a-entity position='0 0 0' scale='0.05 0.05 0.05' gltf-model='https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf' gps-entity-place='latitude: " + position.coords.latitude + "; longitude: " + position.coords.longitude + ";'></a-entity>");
 
             });
             scene.append("<a-camera gps-camera rotation-reader> </a-camera>");
