--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </a-marker>
         <a-text value="This content will always face you." look-at="[gps-camera]" scale="120 120 120"
             gps-entity-place="latitude: 35.176328692427866; longitude: 129.12546811659638;"></a-text>
+        <a-camera gps-camera rotation-reader> </a-camera>
 
     </a-scene>
 
@@ -35,10 +36,18 @@
                 console.log(position)
                 // doSomething(position.coords.latitude, position.coords.longitude);
 
-                scene.prepend(<a-entity position='0 0 0' scale='0.05 0.05 0.05' gltf-model='https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf' gps-entity-place='latitude: " + position.coords.latitude + "; longitude: " + position.coords.longitude + ";'></a-entity>);
+                const entity = document.createElement("a-entity");
+                entity.setAttribute("position", "0 0 0");
+                entity.setAttribute("scale", "0.05 0.05 0.05");
+                entity.setAttribute("gltf-model", "https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf");
+                entity.setAttribute("gps-entity-place", "latitude: " + position.coords.latitude + "; longitude: " + position.coords.longitude + ";");
+
+                scene.prepend(entity)
+
+                // scene.prepend(<a-entity position='0 0 0' scale='0.05 0.05 0.05' 
+                // gltf-model='https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf' gps-entity-place='latitude: " + position.coords.latitude + "; longitude: " + position.coords.longitude + ";'></a-entity>);
 
             });
-            scene.append(<a-camera gps-camera rotation-reader> </a-camera>);
         });
     </script>
 </body>
