--- a/index.html
+++ b/index.html
@@ -40,11 +40,21 @@
                 console.log(position)
                 // doSomething(position.coords.latitude, position.coords.longitude);
 
-                const entity = document.createElement("a-entity");
-                entity.setAttribute("position", "1 1 1");
-                entity.setAttribute("scale", "0.05 0.05 0.05");
-                entity.setAttribute("gltf-model", "https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf");
-                entity.setAttribute("gps-entity-place", "latitude: " + position.coords.latitude + "; longitude: " + position.coords.longitude + ";");
+                for (let i = 0; i < 20; i++) {
+                    const color = Math.random() * 0xffffff;
+                    const size = Math.random() * 10 + 5;
+                    const x = (Math.random() - 0.5) * 100;
+                    const z = (Math.random() - 0.5) * 100;
+
+                    //엔티티 추가
+                    const entity = document.createElement("a-entity");
+                    entity.setAttribute("position", "1 1 1");
+                    entity.setAttribute("scale", "0.05 0.05 0.05");
+                    entity.setAttribute("gltf-model", "https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf");
+                    entity.setAttribute("gps-entity-place", "latitude: " + position.coords.latitude + "; longitude: " + position.coords.longitude + ";");
+                }
+
+
 
                 scene.prepend(entity)
 
