--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 for (let i = 0; i < 20; i++) {
                     const color = Math.random() * 0xffffff;
                     const size = Math.random() * 10 + 5;
-                    const x = (Math.random() - 0.5) * 100;
+                    const x = (Math.random() - 0.5) * 100; // -50 ~ 50
                     const z = (Math.random() - 0.5) * 100;
 
                     //엔티티 추가
